--- a/public/index.html
+++ b/public/index.html
@@ -12,13 +12,23 @@
     <link rel="apple-touch-icon" href="public/logo192.png" />
     <link rel="manifest" href="public/manifest.json" />
     <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <title>RestoMap</title>
   </head>
 
   <body>
     <h1 class="title"><img src="style/logo.jpg" class="logo" /> RestoMap</h1>
 
-    <div id="root"></div>
+    <div class="container-fluid">
+      <div class="row">
+        <div class="col-8">
+          <div id="map"></div>
+        </div>
+        <div class="col-4">
+          <div id="list"></div>
+        </div>
+      </div>
+    </div>
 
   </body>
 </html>
