--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,12 @@
     <link rel="apple-touch-icon" href="public/logo192.png" />
     <link rel="manifest" href="public/manifest.json" />
     <link rel="stylesheet" type="text/css" href="style/style.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+            rel="stylesheet"
+            href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+            integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+            crossorigin="anonymous"
+    />
     <script src="https://kit.fontawesome.com/eb8411d6d5.js" crossorigin="anonymous"></script>
     <title>RestoMap</title>
   </head>
