--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,8 @@
       name="RestoMap"
       content="Trouvez les meilleurs restaurants autour de vous"
     />
-    <link rel="apple-touch-icon" href="public/logo192.png" />
     <link rel="manifest" href="public/manifest.json" />
-    <link rel="stylesheet" type="text/css" href="style/style.css">
+    <link rel="stylesheet" type="text/css" href="index.css">
     <link
             rel="stylesheet"
             href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -23,7 +22,7 @@
   </head>
 
   <body>
-    <h1 class="title"><img src="style/logo.jpg" class="logo" /> RestoMap</h1>
+    <h1 class="title"><img src="logo.jpg" class="logo" alt="logo" /> RestoMap</h1>
 
     <div class="container-fluid">
       <div class="row">
