--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,7 @@
 
   <body>
     <h1 class="title"><img src="logo.jpg" class="logo" alt="logo" /> RestoMap</h1>
+    <div id="root"></div>
 
     <div class="container-fluid">
       <div class="row">
@@ -29,26 +30,6 @@
         </div>
       </div>
     </div>
-
-    <div class="modal fade" id="commentsModal" tabindex="-1" role="dialog" aria-labelledby="commentsModalLabel" aria-hidden="true">
-           aria-labelledby="commentsModalTitle" aria-hidden="true">
-        <div class="modal-dialog modal-dialog-centered" role="document">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="commentsModalTitle">Avis du restaurant</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                <span aria-hidden="true">&times;</span>
-              </button>
-            </div>
-            <div id="commentsBody" class="modal-body"></div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
 
   </body>
 </html>
